libtraceevent: Fix backward compatibility with tep_print_arg_string

It appears that trace-cmd 2.9.6 referenced the tep_print_arg_string to
get to the offset, which was removed by libtraceevent commit 512d7be1
("libtraceevent: Add __rel_loc relative location attribute support").
Add the offset back to both tep_print_arg_string and to
tep_print_arg_bitmask (yeah, it adds a hole in the structure), for
backward compatibility.

Link: https://lore.kernel.org/linux-trace-devel/20220124123749.40a0c18b@gandalf.local.home

Reported-by: Vitaly Chikunov <vt@altlinux.org>
Fixes: 512d7be1 ("libtraceevent: Add __rel_loc relative location attribute support")
Bugzilla: https://bugzilla.kernel.org/show_bug.cgi?id=215521
Signed-off-by: Steven Rostedt (Google) <rostedt@goodmis.org>